--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "respond": "~1.4.2",
     "animate.css": "sass",
     "fastclick": "~1.0.3",
-    "flexboxgrid": "~5.0.0"
+    "flexboxgrid": "~5.0.0",
+    "respimage": "~1.1.6"
   }
 }
