--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "apache-server-configs": "^2.11.0",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.0.0",
+    "grunt-clear": "^0.2.1",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
@@ -25,7 +26,6 @@
     "grunt-sass": "^0.17.0",
     "grunt-scss-lint": "^0.3.4",
     "grunt-svgmin": "^2.0.0",
-    "grunt-uncss": "^0.3.8",
     "grunt-usemin": "^2.6.2",
     "grunt-wiredep": "^2.0.0",
     "jit-grunt": "^0.9.0",
