--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,16 @@
 {
-  "name": "test",
-  "private": true,
-  "dependencies": {
-    "bootstrap-sass-official": "~3.3.1",
-    "modernizr": "~2.8.2",
-    "jquery": "~1.11.1",
-    "outdated-browser": "~1.1.0",
-    "font-awesome": "~4.2.0",
-    "respond": "~1.4.2",
-    "animate.css": "sass",
-    "fastclick": "~1.0.3",
-    "flexboxgrid": "~5.0.0",
-    "respimage": "~1.1.6"
-  }
+	"name": "mjc-framework-jade",
+	"private": true,
+	"dependencies": {
+		"bootstrap-sass-official": "~3.3.1",
+		"modernizr": "~2.8.2",
+		"jquery": "~1.11.2",
+		"outdated-browser": "~1.1.0",
+		"font-awesome": "~4.2.0",
+		"respond": "~1.4.2",
+		"animate.css": "sass",
+		"fastclick": "~1.0.3",
+		"flexboxgrid": "~6.1.0",
+		"respimage": "~1.2.1"
+	}
 }
