--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"grunt-contrib-uglify": "^0.7.0",
 	"grunt-contrib-watch": "^0.6.1",
 	"grunt-html-validation": "^0.1.18",
+	"grunt-jsbeautifier": "^0.2.7",
 	"grunt-mocha": "^0.4.11",
 	"grunt-modernizr": "^0.6.0",
 	"grunt-newer": "^0.8.0",
